--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "expo": "~51.0.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "lucide-react-native": "^0.244.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
